Opened 9 years ago

Closed 8 years ago

#12759 closed bug (fixed)

[Patch] poorman/libhttpd/libhttpd.c: fix gcc6 build

Reported by: mt Owned by: nobody
Priority: normal Milestone: Unscheduled
Component: Applications Version: R1/Development
Keywords: apps/poorman Cc:
Blocked By: Blocking:
Platform: All

Description

Reindent source code, to fix gcc6 '-Werror=misleading-indentation' warnings.

Cc /home/haiku/haiku/haiku/generated-gcc6/objects/haiku/x86/release/apps/poorman/libhttpd.o 
/home/haiku/haiku/haiku/src/apps/poorman/libhttpd/libhttpd.c: In function 'expand_symlinks':
/home/haiku/haiku/haiku/src/apps/poorman/libhttpd/libhttpd.c:1660:5: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
     if ( checked[0] == '\0' )
     ^~
/home/haiku/haiku/haiku/src/apps/poorman/libhttpd/libhttpd.c:1662:2: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
  *freethis = rest;
  ^
cc1: all warnings being treated as errors

Attachments (1)

0013-libhttpd.c-fix-gcc6-build.patch (909 bytes ) - added by mt 9 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by mt, 9 years ago

patch: 01

comment:2 by pulkomandy, 8 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50503.

Note: See TracTickets for help on using tickets.