Fix mixed indentation.

This file uses a mix of tab styles, which gcc6 will warn about because
it sees "misleading indentation". Fix the function where this happens.

Fixes #12759.